# wizball-remake

./: .gitignore  CMakeLists.txt  Dockerfile.armhf  Dockerfile.windows  README.md  SAVE_AND_CONTINUE_AUDIT.md  SAVE_AND_CONTINUE_PLAN.md  SAVE_LOAD_UX_NOTES.md  SDL2_MIGRATION.md  Wizball-Info.plist  Wizball.icns  docker-compose.yml  setup_docker.sh
.github/: FUNDING.yml
.github/workflows/: hugo-pages.yml  release.yml
Documentation/: gles2-migration-plan.md  panfrost-perf-notes.md  portmaster.md  render-queue-target.md
Wizball.xcodeproj/: peterhull.mode1  peterhull.pbxuser  project.pbxproj  project.pbxproj~
Wizball.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cmake/: GenerateVersionText.cmake
portmaster/: WizBall.sh  port.json
scripts/: build_portmaster.sh  build_windows.sh
site/: go.mod  hugo.toml
site/content/: _index.md
site/content/about/: index.md
site/content/downloads/: index.md
site/content/game/: index.md
site/content/posts/: 2026-02-25-bring-up-day.md  2026-02-25-get-this-thing-running-on-linux.md  2026-02-26-sdl2-scaffolding-day.md  2026-02-27-big-tidy-day.md  2026-02-28-audio-and-diagnostics-day.md  2026-03-01-polish-and-weird-bits-day.md  2026-03-02-pruning-day.md  2026-03-03-allegro-exit-day.md  2026-03-04-portmaster-shape-day.md  2026-03-05-handheld-seriousness-day.md  2026-03-06-housekeeping-and-diary-day.md  2026-03-08-gles2-decision-day.md  2026-03-09-covid-hit-day.md  2026-03-14-usable-speeds-day.md  2026-03-15-main-menu-day.md  2026-03-16-release-pipeline-day.md  2026-03-17-first-release-day.md  2026-03-19-save-continue-day.md  2026-03-20-save-speed-day.md
tools/: package_data_zip.py  repack_wizball_data.py
wizball/: CSL.TXT  Copy of scripting_enums.h  FORTIFY.CPP  FORTIFY.H  OpenGL_Extension.txt  SCRIPTLANGUAGE.TXT  SCRIPTLANGUAGE.TXT~  UFORTIFY.H  WizBall.sh  ai_nodes.cpp  ai_nodes.h  ai_zones.cpp  ai_zones.h  algorithms.h  arrays.cpp  arrays.h  asset_vfs.cpp  asset_vfs.h  bitshift_amount.h  blim.h  control.cpp  control.h  data_compile_wizball  data_compile_wizball_  events.cpp  events.h  file_stuff.cpp  file_stuff.h  font_routines.cpp  font_routines.h  fortify.h  funkyfont.cpp  funkyfont.h  game.cpp  game.h  global_param_list.cpp  global_param_list.h  graphics.cpp  graphics.h  helpertag.cpp  (+88 more)
wizball/editor/: Thumbs.db
wizball/exolon/: SAVE_GAME.SAV  ai_node_types.txt  config.txt  constant.txt  cptf.txt  demo_1.dem  entity_dump.txt  error_demo.dem  exited_game_no_error_0.dem  flag.txt  game_demo.dem  global_parameter_list.txt  hiscore_upload_codes.txt  hiscores.txt  interaction_table.txt  location_types.txt  processed_scripts_test.txt  project_settings.txt  report.txt  spawn_point_types.txt  todo.txt
wizball/exolon/datatables/: example_data_table.txt  the_end_positions.txt
wizball/exolon/paths/: path_0000.txt  path_0001.txt  path_0002.txt  path_0003.txt  path_0004.txt
wizball/exolon/prefabs/: reset_prefab.txt  standard_sprite.txt
wizball/exolon/scripts/: ex_add_score.txt  ex_asteroid.txt  ex_asteroid_impact.txt  ex_aurora.txt  ex_big_c2_ship.txt  ex_big_c2_ship_overlay_empty.txt  ex_big_c2_ship_overlay_gory.txt  ex_big_c2_ship_overlay_talking.txt  ex_big_c2_ship_overlay_warning.txt  ex_big_c2_ship_overlay_window.txt  ex_big_explosion.txt  ex_big_ship.txt  ex_bio_growth.txt  ex_black_hole_attractor.txt  ex_black_hole_layer.txt  ex_blinder.txt  ex_blip.txt  ex_blood_splat.txt  ex_body_bit.txt  ex_bonus_score_arrow.txt  ex_bonus_score_background.txt  ex_bordered_window_corner.txt  ex_bordered_window_edge.txt  ex_bullet_pickup.txt  ex_c2_jet_explosion.txt  ex_c2_ship_flyover.txt  ex_c2_ship_plummet.txt  ex_c2_tail_jet.txt  ex_cannon_barrel.txt  ex_completion_asteroid.txt  ex_completion_effect.txt  ex_completion_effect_precursor.txt  ex_completion_nebula.txt  ex_completion_scrolly_message.txt  ex_completion_scrolly_text.txt  ex_completion_starfield.txt  ex_create_particles.txt  ex_debris.txt  ex_debug_handler.txt  ex_define_default_controls.txt  (+169 more)
wizball/exolon/sprites/: EXPLOSIONS[ARB].TXT  GAMEOVER[arb].TXT  LARGE_GRAPHICS[arb].TXT  LEVEL_SCENERY_DEBRIS[arb].TXT  PLAYER_SUPER[arb].TXT  Thumbs.db  auroras[arb].txt  background_stuff[arb].txt  level_scenery_sprites[arb].txt  nebula_background[arb].txt  overlays[arb].txt  pause_fuzz[arb].txt  planet_masks[arb].TXT
wizball/exolon/textfiles/: config_lines.txt  control_names.txt  credits.txt  default_hiscore_names.txt  filenames.txt  menu.txt  scrolly_messages.txt  toker_dedication.txt
wizball/exolon/tilemaps/: LEVEL01.txt  LEVEL02.txt  LEVEL03.txt  LEVEL04.txt  LEVEL05.txt
wizball/exolon/tilesets/: TILESET_#000.TXT
wizball/exolon/wip_sfx/: explosion.sfk
wizball/wizball/: config.txt  constant.txt  constant.txt~  cptf.txt  editor_settings.txt  flag.txt  game_continue.sav  game_continue_meta.sav  global_parameter_list.txt  hiscores.txt  interaction_table.txt  processed_scripts_test.txt  project_settings.txt  report.txt  scriptfile.tsl  spawn_point_types.txt  traced_script_lines.txt  unlocked_tunes.sav  waypoint_lookup_tables.txt  zone_types.txt
wizball/wizball/datatables/: bonus_level_fuzz.txt  bonus_wave_order.txt  defined_key_indexes.txt  enemy_queue_sizes.txt  enemy_queues.txt  fuzz_type_a.txt  fuzz_type_b.txt  level_cauldron_colours.txt  level_complete_buffer_size.txt  level_completion_colours.txt  level_start_positions.txt  level_start_ranges.txt  replacement_tiles.txt  solid_diamond.txt  tune_indices.txt  wiz_and_cat_intro_data.txt
wizball/wizball/paths/: fuzz_path_a.txt  fuzz_path_b.txt  paintdrop_path_1.txt  paintdrop_path_2.txt  paintdrop_path_3.txt  solid_diamond_path.txt
wizball/wizball/prefabs/: reset_prefab.txt
wizball/wizball/scripts/: background.txt  bonus_level_nebula.txt  bonus_level_plasma_cloud.txt  bonus_level_starfield.txt  bonus_level_summary_text.txt  bonus_pearl.txt  bonus_selection_panel.txt  bonus_selection_panel_setup.txt  bonus_wave_enemy.txt  bonus_wave_spawner.txt  catellite.txt  catellite_overlay.txt  catellite_shield_swirl_layer.txt  catellite_shield_swirl_shine_overlay.txt  catellite_two_player.txt  completion_effect.txt  (+192 more)
(+60 files in other folders)
